adding GPG public key

--- a/gpg.html
+++ b/gpg.html
@@ -3,22 +3,32 @@
 
 <HTML LANG="en">
  <HEAD>
-  <TITLE>GPG Fingerprint for Federico Castagnini</TITLE>
+  <TITLE>GPG fingerprint and public key of Federico Castagnini</TITLE>
  </HEAD>
  <BODY>
 
-  <H1>Fingerprint for Federico Castagnini, federico.castagnini@gmail.com</H1>
+  <H1>GPG fingerprint and public key of Federico Castagnini, federico.castagnini@gmail.com</H1>
   <P>
-   <CODE>
+   <font color="#006600">
     sec   4096R/20937D81760D43DC 2016-08-24<BR>
     uid                          Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
     uid                          Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
     ssb   4096R/ADC6E14F2D9C132D 2016-08-24<BR>
-   </CODE>
+   </font>
   </P>
 
-  <B>Long Key ID:</B>20937D81760D43DC<BR>
-  <B>Short Key ID:</B>760D43DC
+  <P>
+    <B>Fingerprint:</B><font color="#006600">E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC</font><BR>
+    <B>Long Key ID:</B><font color="#006600">20937D81760D43DC</font><BR>
+    <B>Short Key ID:</B><font color="#006600">760D43DC</font>
+  </P>
+
+  <P>
+   This new key is available from keyservers.  The easiest way to import this 
+   key may be to import it using:
+
+   gpg --recv-key E2080458EAB27366F665EBD920937D81760D43DC
+  </P>
 
   <P>
    For tips and tricks on using GPG, see Alan Eliasen GPG guide at <A HREF='https://futureboy.us/pgp.html'>https://futureboy.us/pgp.html</A>
@@ -28,4 +38,6 @@
    (See the "Keysigning party" section of that guide to see the steps you
    need to take after the keysigning party to sign keys and return them to
    their owners.)
-   </P>
+  </P>
+
+  <P>This is also available in a <A HREF='760D43DC.txt'>plaintext file</A></P>
