--- a/fingerprint.html
+++ b/fingerprint.html
@@ -10,10 +10,11 @@
   <H1>Fingerprint for Federico Castagnini, federico.castagnini@gmail.com</H1>
   <P>
    <CODE>
-    sec   4096R/20937D81760D43DC 2016-08-24<BR>
-    uid                          Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
-    uid                          Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
-    ssb   4096R/ADC6E14F2D9C132D 2016-08-24<BR>
+    sec 4096R/20937D81760D43DC 2016-08-24<BR>
+    Key fingerprint = E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC
+    uid Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
+    uid Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
+    ssb 4096R/ADC6E14F2D9C132D 2016-08-24<BR>
    </CODE>
   </P>
 
