--- a/gpg.html
+++ b/gpg.html
@@ -11,7 +11,7 @@
   <P>
    <CODE>
     sec 4096R/20937D81760D43DC 2016-08-24<BR>
-    Key fingerprint = E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC
+    key fingerprint = E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC
     uid Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
     uid Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
     ssb 4096R/ADC6E14F2D9C132D 2016-08-24<BR>
