improving gpg page

--- a/gpg.html
+++ b/gpg.html
@@ -25,8 +25,8 @@
   </P>
 
   <P>
-   This new key is available from keyservers.  The easiest way to import this 
-   key may be to import it using:
+   This key is available from keyservers and is also available in a <A HREF='760D43DC.txt'>plaintext file</A>. The easiest way to import this 
+   key may be to import it using:<BR><BR>
 
    gpg --recv-key E2080458EAB27366F665EBD920937D81760D43DC
   </P>
@@ -40,5 +40,5 @@
    need to take after the keysigning party to sign keys and return them to
    their owners.)
   </P>
-
-  <P>This is also available in a <A HREF='760D43DC.txt'>plaintext file</A></P>
+ </BODY>
+</HTML>
