--- a/gpg.html
+++ b/gpg.html
@@ -10,35 +10,43 @@
   <H1>GPG fingerprint and public key of Federico Castagnini, federico.castagnini@gmail.com</H1>
   <P>
    <CODE>
-    sec 4096R/20937D81760D43DC 2016-08-24<BR>
-    key fingerprint = E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC<BR>
-    uid Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
-    uid Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
-    ssb 4096R/ADC6E14F2D9C132D 2016-08-24<BR>
+   pub   4096R/760D43DC 2016-08-24<BR>
+         Key fingerprint = E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC<BR>
+   uid       [ultimate] Federico Castagnini &lt;federico.castagnini@gmail.com&gt;<BR>
+   uid       [ultimate] Federico Castagnini &lt;fcastagnini@bloomberg.net&gt;<BR>
+   sub   4096R/2D9C132D 2016-08-24<BR>
+   sub   4096R/DB400B54 2016-08-25<BR>
    </CODE>
   </P>
 
   <P>
-    <B>Fingerprint:</B><font color="#006600">E208 0458 EAB2 7366 F665  EBD9 2093 7D81 760D 43DC</font><BR>
-    <B>Long Key ID:</B><font color="#006600">20937D81760D43DC</font><BR>
-    <B>Short Key ID:</B><font color="#006600">760D43DC</font>
+   Email: federico.castagnini@gmail.com<BR>
+   GPG fingerprint: <B>E2080458EAB27366F665EBD920937D81760D43DC</B><BR>
+   GPG key: <A HREF='760D43DC.txt'>download here</A>
   </P>
 
   <P>
-   This key is available from keyservers and is also available in a <A HREF='760D43DC.txt'>plaintext file</A>. The easiest way to import this 
-   key may be to import it using:<BR><BR>
+   The easiest way to import this key may be using:<BR><BR>
 
+   <CODE>
    gpg --recv-key E2080458EAB27366F665EBD920937D81760D43DC
+   </CODE>
   </P>
 
   <P>
-   For tips and tricks on using GPG, see Alan Eliasen GPG guide at <A HREF='https://futureboy.us/pgp.html'>https://futureboy.us/pgp.html</A>
-  </P>
-
-  <P>
+   <BR>Good Practices:<BR>
+   <p>
+   - For tips and tricks on using GPG, see Alan Eliasen GPG guide at <A HREF='https://futureboy.us/pgp.html'>https://futureboy.us/pgp.html</A>.
    (See the "Keysigning party" section of that guide to see the steps you
    need to take after the keysigning party to sign keys and return them to
    their owners.)
+   </p>
+   <p>
+   - Please validate fingerprints instead of trusting short/long IDs, they can be faked (<A HREF='https://evil32.com'>https://evil32.com</A>) and we are seeing this <A HREF='https://twitter.com/isislovecruft/status/765611248524328962'>in the wild</A>.
+   </p>
+  </P>
+
+  <P>
   </P>
  </BODY>
 </HTML>
